--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <h4>{{ playerHealth }}</h4>
                 </div>
             </div>
-            <p v-if="!isRunning">Instructions/Advice: You are a warrior trying to defeat a monster tormenting your village!<br>
+            <p v-if="!isRunning"><span>Instructions/Advice:</span> You are a warrior trying to defeat a monster tormenting your village!<br>
             You have already been struck with a venomous bit making your health slowly decline.<br>
             Victory is unlikely unless you take advantage of healing!<br>
             In order to heal you must attack first!<br>
