fixed some typos

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <span>You have already been struck with a venomous bit making your health slowly decline.</span>
             <span>Victory is unlikely unless you take advantage of healing!<br>
             In order to heal you must attack first!</span>
-            <span>1 Attck or Special = 1 Heal</span>
+            <span>1 Attack or Special Stike = 1 Heal</span>
             Good Luck!
             </p>
             <div v-else class="health-bar">
@@ -82,7 +82,8 @@
         </section>
     </div>
     <!-- Jquery -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"
+    `integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <!-- Popper Bootstrap Java Script -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
     <!-- Bootstrap Java Script -->
